--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ minimal_mistakes_skin    : "contrast" # "air", "contrast", "dark", "dirt", "mint
 
 # Site Settings
 locale                   : "en"
-title                    : "Site Title"
+title                    : "My Site"
 title_separator          : "-"
 name                     : "Liu Jizhen"
 description              : "An amazing website."
