--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 minimal_mistakes_skin    : "contrast" # "air", "contrast", "dark", "dirt", "mint", "sunrise"
 
 # Site Settings
-locale                   : "en"
+locale                   : "zh_CN"
 title                    : "My Site"
 title_separator          : "-"
 name                     : "Liu Jizhen"
